fix: string escaping bugs